Init setup for Android Project

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">SmartCarCleaner</string>
+    <string name="app_version_placeholder">v%s-%s</string>
+    <string name="app_flavor_placeholder">%s</string>
+    <string name="app_build_type_placeholder">%s</string>
+    <string name="app_error_placeholder">Error: 000 - Placeholder error message</string>
 </resources>
