--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -4,4 +4,8 @@
     <string name="app_flavor_placeholder">%s</string>
     <string name="app_build_type_placeholder">%s</string>
     <string name="app_error_placeholder">Error: 000 - Placeholder error message</string>
+
+    <string name="login_username_input_hint">Username</string>
+    <string name="login_password_input_hint">Password</string>
+    <string name="login_submit_button_text">Login</string>
 </resources>
