--- a/android/auth-ui/src/main/res/values/strings.xml
+++ b/android/auth-ui/src/main/res/values/strings.xml
@@ -1,6 +1,2 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
-    <string name="f_login_username_input_field_hint">Username</string>
-    <string name="f_login_password_input_field_hint">Password</string>
-    <string name="f_login_submit_button_text">Login</string>
-</resources>
+<resources />
